# qualitative_analysis

./: .gitignore  advanced_analysis.py  analyse.py  basic_analysis.py  check_files.py  custom_stopwords.py  data_processing.py  embeddings_cache.json  main.py  pyproject.toml  sentiment_analysis.py  similarity_analysis.py  visualization.py
